--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "config": "^3.3.7",
     "express": "^4.17.2",
     "mongoose": "^6.2.1",
+    "morgan": "^1.10.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
