--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "config": "^3.3.7",
     "cors": "^2.8.5",
+    "easyinvoice": "^2.3.0",
     "express": "^4.17.2",
     "mongoose": "^6.2.1",
     "morgan": "^1.10.0",
