--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.2",
     "mongoose": "^6.2.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.7.3",
     "socket.io": "^4.4.1",
     "uuid": "^8.3.2"
   },
